examples/test/testpolicy8808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8808
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key2: value44
      key20: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value18
          key43: value1
      podSelector:
        matchLabels:
          key27: value4
          key21: value15
